Add images for programming.

--- a/UV-K6.ipynb
+++ b/UV-K6.ipynb
@@ -228,9 +228,31 @@
     " 4. Hold down the PTT button while turning on the radio.\n",
     " 5. The flashlight LED on the radio will be lit when the radio is in programming mode.\n",
     "\n",
+    "<table>\n",
+    "  <tr>\n",
+    "    <td> <img src=\"UV-K6-programming.png\" alt=\"UV-K6 in programming mode\" style=\"width: 320px;\"/> </td>\n",
+    "  </tr>\n",
+    "</table>\n",
+    "\n",
+    "\n",
     "Use https://egzumer.github.io/uvtools/ to flash the firmware.\n",
     "\n",
     "You can use this direct link to flash the pre-built binary: https://egzumer.github.io/uvtools/?firmwareURL=https://github.com/mobilinkd/uv-k5-firmware-custom/releases/download/v1.0/firmware.packed.bin\n",
+    "\n",
+    "<table>\n",
+    "  <tr>\n",
+    "    <td> <img src=\"uvtools-screenshot.png\" alt=\"uvtools programmer screenshot\" style=\"width: 640px;\"/> </td>\n",
+    "  </tr>\n",
+    "</table>\n",
+    "\n",
+    "Once programmed, the new firmware will show on the boot screen.\n",
+    "\n",
+    "<table>\n",
+    "  <tr>\n",
+    "    <td> <img src=\"UV-K6-boot-screen.png\" alt=\"UV-K6 boot screen with new firmware\" style=\"width: 320px;\"/> </td>\n",
+    "  </tr>\n",
+    "</table>\n",
+    "\n",
     "\n",
     "## Configuring the Radio\n",
     "\n",
