--- a/UV-K6.ipynb
+++ b/UV-K6.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "I have discovered that with a few trivial hardware modification and some new firmware features, we can\n",
     "enhance these $30 radios to provide a flat response on both transmit and receive, allowing these radios\n",
-    "to be used for digital modulation. This article documents those changed and how to get started with digital\n",
+    "to be used for digital modulation. This article documents those changes and how to get started with digital\n",
     "modes using this radio, along with a modem such as the Mobilinkd TNC4.\n",
     "\n",
     "# Overview of Changes\n",
