Remove warning about issue with Mic sensitivity, which seems to have been due to a hardware issue. Update firmware programming link to new version 1be5a20.

--- a/UV-K6.ipynb
+++ b/UV-K6.ipynb
@@ -50,9 +50,7 @@
     "# DISCLAIMER\n",
     "\n",
     "The hardware modifications documented here may result in permanent damage to your radio. The firmware\n",
-    "changes may have introduced bugs which affect other modes. The change to the MIC input seems to reduce\n",
-    "the sensitivity of the radio's microphone. It may be possible to overcome this in firmware by increasing\n",
-    "the microphone sensitivity or tuning Mic AGC. But for now, this issue has not been addressed.\n",
+    "changes may have introduced bugs which affect other modes.\n",
     "\n",
     "# Prequisites\n",
     "\n",
@@ -237,7 +235,7 @@
     "\n",
     "Use https://egzumer.github.io/uvtools/ to flash the firmware.\n",
     "\n",
-    "You can use this direct link to flash the pre-built binary: https://egzumer.github.io/uvtools/?firmwareURL=https://github.com/mobilinkd/uv-k5-firmware-custom/releases/download/v1.0/firmware.packed.bin\n",
+    "You can use this direct link to flash the pre-built binary: https://egzumer.github.io/uvtools/?firmwareURL=https://github.com/mobilinkd/uv-k5-firmware-custom/releases/download/v1be5a20/firmware-1be5a20.packed.bin\n",
     "\n",
     "<table>\n",
     "  <tr>\n",
