Document MIC ADC change.

--- a/UV-K6.ipynb
+++ b/UV-K6.ipynb
@@ -33,7 +33,7 @@
     "The hardware changes which are documented below allow passing low-frequency, wide, flat baseband between\n",
     "the digital modem and the radio's RF chip. This is an absolute necessity for digital baseband modulation.\n",
     "\n",
-    "The firmware changes do the following:\n",
+    "The firmware changes adds a new Digital (DIG) mode which does the following:\n",
     "\n",
     " 1. Eliminate pre-emphasis on transmit and de-emphasis on receive.\n",
     " 2. Eliminate the TX & RX 300Hz sub-audio channel high-pass filter which is used for CTCSS and DCS.\n",
@@ -41,7 +41,8 @@
     " 5. Bypass the transmit low-pass filter.\n",
     " 6. Disable the MIC AGC and the ALC (limiter).\n",
     " 7. Disable squelch.\n",
-    " 8. Reduce turn-around time from ~140ms to less than 80ms by leaving the audio amplifier enabled during\n",
+    " 8. Keep MIC ADC enabled in RX mode to establish and maintain proper DC bias of the MIC input.\n",
+    " 9. Reduce turn-around time from ~140ms to less than 80ms by leaving the audio amplifier enabled during\n",
     "    TX. This also reduces a DC offset error at start of RX. The cost is some wasted current use during TX.\n",
     "\n",
     "Note that the EGZUMER firmware, on which these changes are based, already reduces the turn-around time of the\n",
