Update hardware mod instructions. Add Notes and Changelog.

--- a/UV-K6.ipynb
+++ b/UV-K6.ipynb
@@ -28,6 +28,12 @@
     "to be used for digital modulation. This article documents those changes and how to get started with digital\n",
     "modes using this radio, along with a modem such as the Mobilinkd TNC4.\n",
     "\n",
+    "# Changelog\n",
+    "\n",
+    " - 2024-06-18 Initial publication.\n",
+    " - 2024-07-04 MIC ADC update.\n",
+    " - 2024-07-07 MIC capacitor (C77) value change. Notes on BK4819_REG_30 MIC ADC behavior.\n",
+    "\n",
     "# Overview of Changes\n",
     "\n",
     "The hardware changes which are documented below allow passing low-frequency, wide, flat baseband between\n",
@@ -41,8 +47,9 @@
     " 5. Bypass the transmit low-pass filter.\n",
     " 6. Disable the MIC AGC and the ALC (limiter).\n",
     " 7. Disable squelch.\n",
-    " 8. Keep MIC ADC enabled in RX mode to establish and maintain proper DC bias of the MIC input.\n",
-    " 9. Reduce turn-around time from ~140ms to less than 80ms by leaving the audio amplifier enabled during\n",
+    " 8. ~~Keep MIC ADC enabled in RX mode to establish and maintain proper DC bias of the MIC input.~~\n",
+    " 9. Enable MIC ADC during init for a short period to establish proper DC bias of the MIC input.\n",
+    " 10. Reduce turn-around time from ~140ms to less than 80ms by leaving the audio amplifier enabled during\n",
     "    TX. This also reduces a DC offset error at start of RX. The cost is some wasted current use during TX.\n",
     "\n",
     "Note that the EGZUMER firmware, on which these changes are based, already reduces the turn-around time of the\n",
@@ -55,7 +62,8 @@
     "\n",
     "# Prequisites\n",
     "\n",
-    "You will need 3 10uF, 10V (or higher) 0603 MLCC capacitors and the skill and equipment needed to do surface\n",
+    "You will need ~~3 10uF, 10V (or higher) 0603 MLCC capacitors~~ 2 10uF 10V (or higher) 0603 MLCC\n",
+    "capacitors, 1 1uF 16V 0603 MLCC capacitor, and the skill and equipment needed to do surface\n",
     "mount work on 0402 parts. A tool for loosening the nuts on the antenna connector and potentiometer\n",
     "(AKA [X-Key Repair Tool](https://amzn.to/3KIrhDV)) will also come in handy.\n",
     "\n",
@@ -133,7 +141,7 @@
     "\n",
     " 1. Remove both C77 and R69.\n",
     " 2. Short the pads of C77 with a shunt. Use a 0 Ohm 0402 resistor if you have one handy. Otherwise a 1.6mm or .040\" piece of wire will work.\n",
-    " 3. Replace R69 with a 10uF 0603 MLCC capacitor.\n",
+    " 3. Replace R69 with a ~~10uF~~ 1uF 16V 0603 MLCC capacitor.\n",
     "\n",
     "<table>\n",
     "  <tr>\n",
@@ -153,7 +161,7 @@
     "4.7k resistor at R40, this filters low frequencies below about 300Hz. These parts are in the area normally\n",
     "covered by the LCD.\n",
     "\n",
-    " 1. Add two 10uF capacitors in parallel with C31 as shown below.\n",
+    " 1. Add two 10uF 10V capacitors in parallel with C31 as shown below.\n",
     "\n",
     "<table>\n",
     "  <tr>\n",
@@ -379,7 +387,43 @@
     "at full power. It is currently about 120ms. This is longer than requried.  The firmware does key\n",
     "debounce which requires 30ms. This can be eliminated for PTT in `DIG` mode where PTT is controlled\n",
     "by a modem/TNC. The same improvements for turn-around time will also reduce transmit delay. I suspect\n",
-    "it is possible to get each down to around 40ms without too much work."
+    "it is possible to get each down to around 40ms without too much work.\n",
+    "\n",
+    "The deviation values when in `DIG` mode for Wide and Narrow modes are hard-coded in the firmware\n",
+    "to values that work well for the TNC4. These should be moved into EEPROM settings to make it easier\n",
+    "to match the radio to other modems.\n",
+    "\n",
+    "# Notes\n",
+    "\n",
+    "## MIC Input Bias\n",
+    "\n",
+    " - The MIC input bias shoots up to ~3V at power-on. The nominal value for this is 1/2 the ADC voltage\n",
+    "(1.35V). The MIC ADC must be enabled (with RX DSP disabled -- see below) to bring the bias voltage\n",
+    "down to the proper level.\n",
+    " - When MIC ADC is enabled (REG_30, bit 2), the DC bias is adjusted to the required level, but this takes\n",
+    "time based on the size of C77. At 10uF, this takes 2.5s. 1uF for C77 seems to decent low frequency\n",
+    "response and only requires 250ms to settle. This can be done at power-on in BK4819_Init().\n",
+    " - Through a tedious process of elimination it was determined that when the RX DSP is enabled (REG_30,\n",
+    "bit 0), the MIC ADC bias level will not self-adjust. It will only adjust when MIC ADC is enabled\n",
+    "and RX DSP is disabled.\n",
+    " - I suspect that the voltage is shooting up to 3V because the Egzumer firmware enables MIC AGC in\n",
+    "BK4819_Init() but I have not checked this yet. Worth investigating.\n",
+    "\n",
+    "## Startup\n",
+    "\n",
+    " - The Egzumer startup processing seems like it could be optimized a bit. There are some time-consuming\n",
+    "BK4819 initialization which occurs before the welcome screen is shown. It seems that this could be done\n",
+    "while the welcome screen is shown.\n",
+    "\n",
+    "## Mode Switching\n",
+    "\n",
+    " - Full testing of behavior when switching between `Demodu` settings has not been done. So far I\n",
+    "have not seen any issues when switching between `FM` and `DIG` modes.\n",
+    "\n",
+    "## Build Script\n",
+    "\n",
+    " - I have added a build script for doing Docker builds on hosts with SELinux in enforcing mode.\n",
+    " - The script includes support for adding the packed firmware artifact to the `Recent` file list."
    ]
   },
   {
@@ -407,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
