Update firmware update link.

--- a/UV-K6.ipynb
+++ b/UV-K6.ipynb
@@ -244,7 +244,7 @@
     "\n",
     "Use https://egzumer.github.io/uvtools/ to flash the firmware.\n",
     "\n",
-    "You can use this direct link to flash the pre-built binary: https://egzumer.github.io/uvtools/?firmwareURL=https://github.com/mobilinkd/uv-k5-firmware-custom/releases/download/v1be5a20/firmware-1be5a20.packed.bin\n",
+    "You can use this direct link to flash the pre-built binary: https://egzumer.github.io/uvtools/?firmwareURL=https://github.com/mobilinkd/uv-k5-firmware-custom/releases/download/ve1e2fea/firmware.packed.bin.ve1e2fea\n",
     "\n",
     "<table>\n",
     "  <tr>\n",
